# EUCORA

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER-REBUILD-INSTRUCTIONS.md  PSScriptAnalyzerSettings.psd1  README-DEMO-BACKUP.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  prompt.md
backend/: .coverage  .env.example  Dockerfile  Dockerfile.dev  README.md  celerybeat-schedule  conftest.py  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  test_metrics_recording.py
backend/apps/agent_management/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/agent_management/migrations/: 0001_initial.py
backend/apps/agent_management/tests/: __init__.py  test_api.py  test_models.py  test_services.py  test_tasks.py
backend/apps/ai_agents/: __init__.py  apps.py  guardrails.py  models.py  services.py  tasks.py  urls.py  views.py
backend/apps/ai_agents/agents/: __init__.py  amani_assistant.py  base_agent.py  execution_framework.py
backend/apps/ai_agents/migrations/: 0001_initial.py  0002_add_api_key_dev.py  0003_alter_aiagenttask_status.py  0004_alter_aimodelprovider_api_key_dev.py
backend/apps/ai_strategy/: __init__.py  apps.py  service.py
backend/apps/application_portfolio/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/authentication/: __init__.py  apps.py  dev_auth.py  models.py  urls.py  views.py
backend/apps/cab_workflow/: __init__.py  api_views.py  apps.py  models.py  models_p5.py  serializers.py  services.py  services_p5_5_integration.py  urls.py  views.py
backend/apps/connectors/: __init__.py  apps.py  models.py  services.py  urls.py  urls_assets.py  views.py
backend/apps/core/: __init__.py  apps.py  circuit_breaker.py  demo_data.py  encryption.py  health.py  http.py  metrics.py  middleware.py  models.py  observability.py  pagination.py  resilient_http.py  retry.py  structured_logging.py  tasks.py  throttles.py  urls.py  utils.py  views_demo.py  views_deployments.py  views_health.py  views_metrics.py  views_tasks.py
backend/apps/deployment_intents/: __init__.py  apps.py  models.py  tasks.py  urls.py  views.py
backend/apps/event_store/: __init__.py  apps.py  models.py  tasks.py  urls.py  views.py
backend/apps/evidence_store/: __init__.py  api_views_p5_5.py  apps.py  blast_radius_classifier.py  models.py  models_p5.py  models_p5_5.py  security_validator.py  serializers_p5_5.py  services.py  storage.py  trust_maturity_engine.py  urls.py  views.py
backend/apps/integration_tests/: __init__.py  test_cab_workflow_integration.py.skip  test_connector_resilience.py  test_e2e_deployment_flow.py.skip
backend/apps/integrations/: __init__.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/license_management/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/packaging_factory/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/policy_engine/: __init__.py  apps.py  models.py  services.py  urls.py  views.py
backend/apps/telemetry/: __init__.py  apps.py  models.py  urls.py  views.py
backend/config/: __init__.py  asgi.py  celery.py  exception_handler.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  development.py  production.py
backend/config/tests/: test_exception_handler.py
backend/data/: .gitkeep
backend/docs/: docker-build-root-cause.md  phase-8-complete.md  phase-8-status.md
backend/docs/testing/: api-implementation-session-2026-01-24.md  test-fixing-session-2026-01-24.md
backend/prometheus/: alert_rules.yaml  grafana-dashboard-provider.yaml  grafana-dashboard.json  grafana-datasource.yaml  prometheus.yml
backend/redis/: redis.conf
backend/reports/: COMMIT-SUMMARY-2026-01-25.md  DOCKER-REBUILD-COMPLETE-2026-01-25.md  IMPLEMENTATION_SESSION_JAN_23_2026.md  P2_P3_RESILIENCE_IMPLEMENTATION.md  P5_5_COMPREHENSIVE_TEST_SUITE.md  P5_5_DEFENSE_IN_DEPTH_IMPLEMENTATION_REPORT.md  P5_COMPLETION_STATUS_REPORT.md  PENDING-WORK-STATUS-2026-01-25.md  coverage-gap-analysis-2026-01-24.md  dependency-upgrade-summary-2026-01-24.md  django-51-migration-fix-2026-01-24.md  docker-crash-fix-2026-01-24.md  final-security-remediation-2026-01-24.md  security-scan-report-2026-01-24.md  test-writing-plan-2026-01-24.md
backend/requirements/: base.txt  development.txt  production.txt
backend/tests/: test_observability_metrics.py  test_observability_prometheus_endpoint.py  test_observability_tracing.py
backend/tests/integration/: test_connector_services.py
(+693 files in other folders)
